--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								<!-- <h2 class="gradient-text">Welcome to my site. </h2> -->
 								<h2 class="gradient-text">This is my new site...For visit this site
                                     click below... </h2>
-								<p><a href="#" class="btn btn-gradient">Click here</a></p>
+								<p><a href="http://shariar.pythonanywhere.com/" class="btn btn-gradient">Click here</a></p>
 							</div>	
 						</div>
 					</div>
