--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<div class="dt js-height">
 							<div class="dtc animate-box">
                                 
-								<h2 class="gradient-text">Hi, I am shariar.</h2>
+								<h2 class="gradient-text">Hi, I am Shariar.</h2>
 								<!-- <h2 class="gradient-text">Welcome to my site. </h2> -->
 								<h2 class="gradient-text">This is my new site...For visit this site
                                     click below... </h2>
