shariar's blog add

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Boikotha</title>
+	<title>AL SHARIAR</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 
@@ -57,7 +57,7 @@
 				
 				<div class="row">
 					<div class="col-sm-2 col-xs-2">
-						<div id="gtco-logo"><a href="index.html">BoiKotha<sup>&trade;</sup></div>
+						<div id="gtco-logo"><a href="index.html">AL SHARIAR<sup>&trade;</sup></div>
 					</div>
 					<div class="col-xs-10 text-right fh5co-top-social">
 						<ul class="gtco-social">
@@ -80,9 +80,10 @@
                                 
 								<h2 class="gradient-text">Hi, I am Shariar.</h2>
 								<!-- <h2 class="gradient-text">Welcome to my site. </h2> -->
-								<h2 class="gradient-text">This is my new site...For visit this site
-                                    click below... </h2>
-								<p><a href="http://shariar.pythonanywhere.com/" class="btn btn-gradient">Click here</a></p>
+								<h2 class="gradient-text"> Here all my blog site...For visit these site
+                                    click the button below... </h2>
+								<p><a href="http://shariar.pythonanywhere.com/" class="btn btn-gradient">Boikotha</a></p>
+								<p><a href="http://shariar.pythonanywhere.com/" class="btn btn-gradient">Shariar's Blog</a></p>
 							</div>	
 						</div>
 					</div>
