--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				
 				<div class="row">
 					<div class="col-sm-2 col-xs-2">
-						<div id="gtco-logo"><a href="index.html">AL SHARIAR<sup>&trade;</sup></div>
+						<div id="gtco-logo"><a href="index.html">SHARIAR<sup>&trade;</sup></div>
 					</div>
 					<div class="col-xs-10 text-right fh5co-top-social">
 						<ul class="gtco-social">
@@ -80,10 +80,9 @@
                                 
 								<h2 class="gradient-text">Hi, I am Shariar.</h2>
 								<!-- <h2 class="gradient-text">Welcome to my site. </h2> -->
-								<h2 class="gradient-text"> Here all my blog site...For visit these site
-                                    click the button below... </h2>
+								<h2 class="gradient-text"> Here all my blog site... </h2>
 								<p><a href="http://shariar.pythonanywhere.com/" class="btn btn-gradient">Boikotha</a></p>
-								<p><a href="http://shariar.pythonanywhere.com/" class="btn btn-gradient">Shariar's Blog</a></p>
+								<p><a href="http://shariartwo.pythonanywhere.com/" class="btn btn-gradient">Shariar's Blog</a></p>
 							</div>	
 						</div>
 					</div>
