--- a/index.html
+++ b/index.html
@@ -80,9 +80,17 @@
                                 
 								<h2 class="gradient-text">Hi, I am Shariar.</h2>
 								<!-- <h2 class="gradient-text">Welcome to my site. </h2> -->
-								<h2 class="gradient-text"> Here all my blog site... </h2>
-								<p><a href="http://shariar.pythonanywhere.com/" class="btn btn-gradient">Boikotha</a></p>
-								<p><a href="http://shariartwo.pythonanywhere.com/" class="btn btn-gradient">Shariar's Blog</a></p>
+								<h2 class="gradient-text">My all blog site: </h2>
+								<p>
+									<a href="http://shariar.pythonanywhere.com/" class="btn btn-gradient">Boikotha</a>
+									<a href="http://shariartwo.pythonanywhere.com/" class="btn btn-gradient">Shariar's Blog</a>
+								</p>
+								<h2 class="gradient-text"> My Portfolio: </h2>
+
+								<p>
+									<a href="https://shariarbup.github.io/alShariar/" class="btn btn-gradient">My Portfolio</a>
+								</p>
+								
 							</div>	
 						</div>
 					</div>
